[workspace]
members = [
    "src/boot",
    "src/gui",
    "src/kernel",
    "src/fs",
    "src/drivers",
    "src/shell",
    "src/startup",
    "src/neobench"
]

[patch.crates-io]
compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins", branch = "master", features = ["mem"] }

# Optional: fix resolver warning
resolver = "2"
